@@ -227,7 +227,7 @@ static SHORT amg_setup_smoothP_smoothR (AMG_data *mgl,
         if ( status < 0 ) {
             // When error happens, stop at the current multigrid level!
             if ( prtlvl > PRINT_MIN ) {
-                printf("### WARNING: VMB aggregation on level-%d failed!\n", lvl);
+                printf("### WARNING: Forming aggregates on level-%d failed!\n", lvl);
             }
             status = FASP_SUCCESS; break;
         }
@@ -446,7 +446,7 @@ static SHORT amg_setup_smoothP_unsmoothR (AMG_data *mgl,
         if ( status < 0 ) {
             // When error happens, stop at the current multigrid level!
             if ( prtlvl > PRINT_MIN ) {
-                printf("### WARNING: VMB aggregation on level-%d failed!\n", lvl);
+                printf("### WARNING: Forming aggregates on level-%d failed!\n", lvl);
             }
             status = FASP_SUCCESS; break;
         }
