@@ -121,9 +121,8 @@ INT fasp_solver_pvgmres (mxv_matfree *mf,
     }
     
     p  = (REAL **)fasp_mem_calloc(Restartplus1, sizeof(REAL *));
-    hh = (REAL **)fasp_mem_calloc(Restartplus1, sizeof(REAL *));
-    
-    if (print_level > PRINT_NONE) norms = (REAL *)fasp_mem_calloc(MaxIt+1, sizeof(REAL));
+    hh = (REAL **)fasp_mem_calloc(Restartplus1, sizeof(REAL *));    
+    norms = (REAL *)fasp_mem_calloc(MaxIt+1, sizeof(REAL));
     
     r = work; w = r + n; rs = w + n; c = rs + Restartplus1; s = c + Restart;
     for (i = 0; i < Restartplus1; i ++) p[i] = s + Restart + i*n;
